# openai-chat

./: .dockerignore  Dockerfile  README.md  alembic.ini  bot.py  chat.py  docker-compose.yml  docker-entrypoint.sh  domains.py  models.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 24e84b87711e_.py  46307da0d347_.py  66bc6b535292_initial.py  7ec8d296f39e_.py  7f43476cd354_.py  97d9bef3e2f6_.py
src/openai_chat/: _domains.py  actions.py  app.py  bot.py  chat.py  decorators.py  domains.py  models.py  settings.py  telebot.py
src/openai_chat/db/: connect.py  models.py
tests/: test_telebot.py
